# 26_wuren_xiongdezhi

homework/: README.md
homework/作业1/: a_star.py
homework/作业2/: mlr-L1.ipynb  mlr-L2.ipynb
homework/作业3/: svm.py
homework/作业4/: Kmeans_Exp.ipynb
ros2_homework_basic_ws/: README.md
ros2_homework_basic_ws/install/: local_setup.sh  setup.sh
ros2_homework_basic_ws/install/cone_map_visualization/lib/cone_map_visualization/: map_visualizer
ros2_homework_basic_ws/install/cone_map_visualization/share/cone_map_visualization/: local_setup.sh  package.ps1  package.sh  package.xml  package.zsh
ros2_homework_basic_ws/install/fsd_common_msgs/share/fsd_common_msgs/: package.bash  package.ps1  package.sh  package.zsh
ros2_homework_basic_ws/log/: latest_build
ros2_homework_basic_ws/src/cone_map_visualization/: CMakeLists.txt
ros2_homework_basic_ws/src/cone_map_visualization/launch/: launch.py
ros2_homework_basic_ws/src/cone_map_visualization/src/: visualization.cpp
ros2_homework_basic_ws/src/fsd_common_msgs/: CMakeLists.txt
ros2_homework_basic_ws/src/fsd_common_msgs/msg/: Cone.msg  Time.msg
ros2_homework_basic_ws/src/install/: local_setup.sh  setup.sh
ros2_homework_basic_ws/src/log/: latest_build
ros2_homework_basic_ws/src/ros2_homework_basic_package/: CMakeLists.txt
ros2_homework_basic_ws/src/ros2_homework_basic_package/config/: turtle_config.yaml
ros2_homework_basic_ws/src/ros2_homework_basic_package/launch/: launch.py
ros2_homework_basic_ws/src/ros2_homework_basic_package/src/: turtle_8.cpp
(+305 files in other folders)
